--- a/AZ500.md
+++ b/AZ500.md
@@ -25,7 +25,7 @@ Please bear this in mind as exam materials are updated continually but may recie
     - [Configure and manage Azure Key Vault](https://github.com/gvnshtn/ExamGuides/blob/main/AZ500.md#configure-and-manage-azure-key-vault)
 
 ## Resources
-* Exam AZ-500: Microsoft Azure Security Technologies
+* Exam AZ-500: Microsoft Azure Security Technologies. The skills measured page is your North Star, don't distract yourself by going down avenues not explicity listed on this page as the questions *must* reflect these skills. 
   * [aka.ms/AZ500](https://aka.ms/az500)
   * [Skills Measured](https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VC70)
 * MS Learn content for the updated exam has been posted, although it does have some teething issues in terms of alignment with the Skills Measured page.
