--- a/AZ500.md
+++ b/AZ500.md
@@ -35,7 +35,7 @@ Please bear this in mind as exam materials are updated continually but may recie
   *  [AZ-500 part 4: Manage security operation](https://docs.microsoft.com/en-us/learn/paths/manage-security-operation/)
 * Mark O'Shea has a solid exam guide that reflects the September 29th 2021 update:
   *  [Preparing for the AZ-500 Microsoft Azure Security Technologies Exam (September 2021 Update)](https://intunedin.net/2021/10/19/preparing-for-the-az-500-microsoft-azure-security-technologies-exam-september-2021-update/)
-* [Tim Warner](https://twitter.com/techtrainertim) runs an [AZ-500 Crash Course](https://learning.oreilly.com/live-events/exam-az-500-microsoft-azure-security-technologies-crash-course/0636920360612/0636920062468/) on Pluralsight.
+* [Tim Warner](https://twitter.com/techtrainertim) runs an [AZ-500 Crash Course](https://learning.oreilly.com/live-events/exam-az-500-microsoft-azure-security-technologies-crash-course/0636920360612/0636920062468/) on O'Reilly.
 * The [Mark Grimes](https://twitter.com/markbgrimes) is worth a watch to help you gauge how much time you will need to prepare and what kind of process to follow.
   * [AZ-500 C.E.R.T YouTube Playlist](https://youtube.com/playlist?list=PLVY1cokqlbC5C5EnjTTJAZFpX9I4FT8Uy)
 <br>
