--- a/AZ500.md
+++ b/AZ500.md
@@ -4,7 +4,6 @@ The exam was updated in September 2021 and I am taking the exam in Q4 2021.
 Please bear this in mind as exam materials are updated continually but may recieve major updates every six months, typically in Q1 and Q3.
 
 ## Contents
-
 - [Resources](https://github.com/gvnshtn/ExamGuides/blob/main/AZ500.md#resources)
 - [Worksheet](https://github.com/gvnshtn/ExamGuides/blob/main/AZ500.md#worksheet)
   - [Manage identity and access (30-35%)](https://github.com/gvnshtn/ExamGuides/blob/main/AZ500.md#manage-identity-and-access-30-35)
@@ -39,6 +38,8 @@ Please bear this in mind as exam materials are updated continually but may recie
 * The [Mark Grimes](https://twitter.com/markbgrimes) is worth a watch to help you gauge how much time you will need to prepare and what kind of process to follow.
   * [AZ-500 C.E.R.T YouTube Playlist](https://youtube.com/playlist?list=PLVY1cokqlbC5C5EnjTTJAZFpX9I4FT8Uy)
 <br>
+* Pluralsight has their content if that works for you
+  * [Microsoft Azure Security Technologies (AZ-500)](https://www.pluralsight.com/paths/microsoft-azure-security-technologies-az-500)
 What works for some may not work for others. But I can recommend three things:
 
 1. Read '[Make It Stick: The Science of Successful Learning](https://www.amazon.com/Make-Stick-Science-Successful-Learning/dp/0674729013/ref=sr_1_1)' (ISBN:9780674729018).
