--- a/AZ500.md
+++ b/AZ500.md
@@ -39,7 +39,8 @@ Please bear this in mind as exam materials are updated continually but may recie
   * [AZ-500 C.E.R.T YouTube Playlist](https://youtube.com/playlist?list=PLVY1cokqlbC5C5EnjTTJAZFpX9I4FT8Uy)
 * Pluralsight has their content if that works for you
   * [Microsoft Azure Security Technologies (AZ-500)](https://www.pluralsight.com/paths/microsoft-azure-security-technologies-az-500)
-<br>What works for some may not work for others. But I can recommend three things:
+<br>
+What works for some may not work for others. But I can recommend three things:
 
 1. Read '[Make It Stick: The Science of Successful Learning](https://www.amazon.com/Make-Stick-Science-Successful-Learning/dp/0674729013/ref=sr_1_1)' (ISBN:9780674729018).
 2. Fork or print this page out and check off the docs as you move through the list.
