--- a/AZ500.md
+++ b/AZ500.md
@@ -35,9 +35,9 @@ Please bear this in mind as exam materials are updated continually but may recie
 * Mark O'Shea has a solid exam guide that reflects the September 29th 2021 update:
   *  [Preparing for the AZ-500 Microsoft Azure Security Technologies Exam (September 2021 Update)](https://intunedin.net/2021/10/19/preparing-for-the-az-500-microsoft-azure-security-technologies-exam-september-2021-update/)
 * [Tim Warner](https://twitter.com/techtrainertim) runs an [AZ-500 Crash Course](https://learning.oreilly.com/live-events/exam-az-500-microsoft-azure-security-technologies-crash-course/0636920360612/0636920062468/) on O'Reilly.
-* The [Mark Grimes](https://twitter.com/markbgrimes) is worth a watch to help you gauge how much time you will need to prepare and what kind of process to follow.
+* [Mark Grimes](https://twitter.com/markbgrimes) C.E.R.T series is worth a watch, this will really help you gauge how much time you will need to prepare and what kind of process to follow.
   * [AZ-500 C.E.R.T YouTube Playlist](https://youtube.com/playlist?list=PLVY1cokqlbC5C5EnjTTJAZFpX9I4FT8Uy)
-* Pluralsight has their content if that works for you
+* Tim Warner also has a Pluralsight course too if that works for you
   * [Microsoft Azure Security Technologies (AZ-500)](https://www.pluralsight.com/paths/microsoft-azure-security-technologies-az-500)
 <br>
 What works for some may not work for others. But I can recommend three things:
